Fixed sizing issues on smaller screen

--- a/src/components/layouts/MainNav.module.css
+++ b/src/components/layouts/MainNav.module.css
@@ -14,6 +14,7 @@
     position: sticky;
     top: 0;
     scroll-behavior: smooth !important;
+    min-width: 1100px;
 }
 
 nav {
