--- a/src/components/pages/Projects.module.css
+++ b/src/components/pages/Projects.module.css
@@ -10,6 +10,7 @@
   height:100vh;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .card {
